--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,15 @@
 services:
 
   app:
-    build: .
+    build: 
+      context: .
+      target: builder
     env_file:
       - .env
+    volumes:
+      - .:/app
+    working_dir: /app
+    command: sh -c "go build -o main ./api/main.go && ./main"
     depends_on:
       - db
     ports:
