--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,14 +6,22 @@ services:
       target: builder
     env_file:
       - .env
-    volumes:
-      - .:/app
     working_dir: /app
-    command: sh -c "go build -o main ./api/main.go && ./main"
+    command: ./main
     depends_on:
       - db
+      - storage
     ports:
       - "${SERVER_PORT}:${SERVER_PORT}"
+
+  storage:
+    image: redis:7.4-alpine
+    restart: always
+    ports:
+      - "${REDIS_PORT}:6379"
+    command: redis-server --save 20 1 --loglevel warning --requirepass ${REDIS_PASSWORD}
+    volumes:
+      - storage:/data
 
   db:
     image: postgres:alpine
@@ -22,9 +30,11 @@ services:
       - POSTGRES_PASSWORD=${DB_PASSWORD}
       - POSTGRES_DB=${DB_NAME}
     ports:
-      - "${DB_PORT}:${DB_PORT}" 
+      - "${DB_PORT}:5432"
     volumes:
       - postgres-db:/var/lib/postgresql/data  
 
 volumes:
+  storage:
+    driver: local
   postgres-db: {}
